# dm

./: .gitignore  README.md  articles.csv  explanations.md  pipeline.py  pyproject.toml  topics.json
SQL/: README.md  q1.sql  q2.sql
src/: enrichment.py  readers.py
tests/: test_enrichment.py  test_readers.py
